[iOS WK2] editorState should include information about selection clipping rectangle. https://bugs.webkit.org/show_bug.cgi?id=144603 rdar://problem/20521252

Reviewed by Chris Dumez.

Adding selectionClipRect to the post-layout portion of EditorState.
This way we can compute the selection clipping rectangle based on
up-to-date information instead of using the rectangle provided when
then element was first focused.

* Shared/EditorState.cpp:
(WebKit::EditorState::PostLayoutData::encode):
(WebKit::EditorState::PostLayoutData::decode):
* Shared/EditorState.h:
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _selectionClipRect]):
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::platformEditorState):



Canonical link: https://commits.webkit.org/162615@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183780 268f45cc-cd09-0410-ab3c-d52691b4dbfc